Bug #9133
ucbcmd: this statement may fall through
Start date:
2018-02-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Issues found by gcc 7 build:
sed0.c: In function 'fcomp': sed0.c:246:5: error: this statement may fall through [-Werror=implicit-fallthrough=] comperr("Unrecognized command: %s"); ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ sed0.c:248:4: note: here case '!': ^~~~ stty.c: In function 'main': stty.c:159:4: error: this statement may fall through [-Werror=implicit-fallthrough=] exit(0); ^~~~~~~ stty.c:160:3: note: here case 'h': ^~~~ stty.c:162:4: error: this statement may fall through [-Werror=implicit-fallthrough=] exit(0); ^~~~~~~ stty.c:163:3: note: here default: ^~~~~~~ tset.c: In function 'main': tset.c:560:18: error: this statement may fall through [-Werror=implicit-fallthrough=] Specialerase = YES; ^ tset.c:563:4: note: here case 'e': /* erase character */ ^~~~ tset.c:829:4: error: this statement may fall through [-Werror=implicit-fallthrough=] exit(-1); ^~~~~~~~ tset.c:831:3: note: here case 0: ^~~~ cc1: all warnings being treated as errors
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 566b4223c74de6cad48ddbedf35a12d6a511c8c5
commit 566b4223c74de6cad48ddbedf35a12d6a511c8c5 Author: Toomas Soome <tsoome@me.com> Date: 2018-07-19T17:02:24.000Z 9133 ucbcmd: this statement may fall through Reviewed by: Andrew Stormont <astormont@racktopsystems.com> Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Ken Mays <kmays2000@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>