usr/src/ucbcmd/stty/stty.c
@@ -28,6 +28,7 @@
 /*	  All Rights Reserved  	*/
 
 #include <stdio.h>
+#include <stdlib.h>
 #include <ctype.h>
 #include <sys/types.h>
 #include <termio.h>
